[package]
name = "ipinfo-round-robin-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum               = "0.7"
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.12", features = ["json", "stream"] }
moka               = { version = "0.12", features = ["future"] }
async_singleflight = "0.4"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy            = "0.15"
tokio-util         = "0.7"
parking_lot        = "0.12"

[dev-dependencies]
wiremock           = "0.6"
tokio              = { version = "1", features = ["full"] }
tower              = { version = "0.5", features = ["util"] }
