[package]
name = "ipinfo-round-robin-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker       = { version = "0.4", features = ["http"] }
axum         = { version = "0.7", default-features = false, features = ["http1", "json"] }
tower        = { version = "0.4", default-features = false, features = ["util"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = { version = "1", features = ["preserve_order"] }
web-time     = "1"
wasm-bindgen = "0.2"
